--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styletask.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -31,5 +31,6 @@
         </div>
     </section>
 </body>
+
 
 </html>
